--- a/MonetDB5/conf/monetdb5.conf.5
+++ b/MonetDB5/conf/monetdb5.conf.5
@@ -90,6 +90,8 @@ integer, which value can be (a combination of):
                              for debugging (GDK developers, only)
   134217728 = OPTMASK      = trace the actions, decisions and
                              effects of MAL optimizers
+  268435456 = EXTENDMASK   = trace/debug HEAPextend;
+                             used only for development & debugging
   536870912 = FORCEMITOMASK = forcefully activate mitosis even on
                               small tables, i.e., split small tables
                               in as many (tiny) pieces as there are
